<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Rei Matsushita
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is
  ~ distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See
  ~ the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="about_app">このアプリについて</string>
    <string name="post_review">レビューを書く</string>
    <string name="find_reader">読み上げ版を見る</string>
    <string name="license">ライセンス</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="version">version: %1$s</string>

    <string name="text_explain_app">このアプリは百人一首を覚えるためのアプリです。簡単に繰り返し練習して使ってもらえることを目標に作成しました。</string>
    <string name="text_explain_app_training">出題条件を設定して繰り返し練習できます。</string>
    <string name="text_explain_app_exam">百首通しで出題されます。結果は過去10回分が保存され、間違えた問題は振り返りで練習することができます。</string>
    <string name="text_explain_app_material">百人一首の資料を閲覧します。決まり字や歌の現代語訳を見ることができます。</string>

    <string name="url_policy">file:///android_asset/policy.html</string>
</resources>
